# FileDrop

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
filedrop/: __init__.py  __main__.py  database.py  handlers.py  security.py  server.py  share.py  storage.py  utils.py
filedrop/templates/: error.html  index.html  upload.html
tests/: test_server.py  test_share.py  test_storage.py  test_utils.py
